--- a/public/x/templates/default.style.hbs
+++ b/public/x/templates/default.style.hbs
@@ -28,9 +28,10 @@
 
    --page-link-gap: {{> useProperty name="page_link_gap" default="10pt" }};
    --page-link-width: {{> useProperty name="page_link_width" default="100%" }};
-   --page-link-radius: {{> useProperty name="page_link_radius" default="8pt" }};
+   --page-link-radius: {{> useProperty name="page_link_radius" default="5pt" }};
    --page-link-background-color: {{> useProperty name="page_link_background_color" default="transparent" }};
    --page-link-background-image: {{> useProperty name="page_link_background_image" default="none" }};
    --page-link-foreground-color: {{> useProperty name="page_link_foreground_color" default="inherit" }};
    --page-link-border: {{> useProperty name="page_link_border" default="1px solid #DDDDDD" }};
+   --page-link-shadow: {{> useProperty name="page_link_shadow" default="0 8px 12px rgb(0 0 0 / 30%)" }};
 }
