update static resource url

--- a/public/x/templates/default.layout.hbs
+++ b/public/x/templates/default.layout.hbs
@@ -5,7 +5,7 @@
    <meta charset="UTF-8" />
    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <base href="https://static.iamone.link" />
+   <base href="https://rajatxs.github.io/iamone-static" />
    <meta name="author" content="Rajat Sharma" />
    <meta name="keywords" content="iamone, iamone.link, social media, link page, links, personal link page, link website, bio link" />
 
