remove base url

--- a/public/x/templates/default.layout.hbs
+++ b/public/x/templates/default.layout.hbs
@@ -5,7 +5,6 @@
    <meta charset="UTF-8" />
    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <base href="https://rajatxs.github.io/iamone-static" />
    <meta name="author" content="Rajat Sharma" />
    <meta name="keywords" content="iamone, iamone.link, social media, link page, links, personal link page, link website, bio link" />
 
@@ -36,8 +35,8 @@
    <meta property="twitter:card" content="summary_large_image" />
    <meta property="og:url" content="https://iamone.link/{{ user.username }}" />
    <meta property="twitter:url" content="https://iamone.link/{{ user.username }}" />
-   <meta property="og:image" content="/images/open-graph-thumb.png" />
-   <meta property="twitter:image" content="/images/open-graph-thumb.png" />
+   <meta property="og:image" content="https://rajatxs.github.io/iamone-static/images/open-graph-thumb.png" />
+   <meta property="twitter:image" content="https://rajatxs.github.io/iamone-static/images/open-graph-thumb.png" />
 
    <meta property="og:site_name" content="iamone" />
    <meta property="og:type" content="website" />
@@ -48,15 +47,15 @@
    <link rel="shortcut icon" href="https://gateway.ipfs.io/ipfs/{{ user.imageHash }}" type="image/x-icon" />
    <link rel="icon" href="https://gateway.ipfs.io/ipfs/{{ user.imageHash }}" type="image/webp" />
    {{else}}
-   <link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon" />
-   <link rel="icon" href="/icons/favicon.ico" type="image/png" />
+   <link rel="shortcut icon" href="https://rajatxs.github.io/iamone-static/icons/favicon.ico" type="image/x-icon" />
+   <link rel="icon" href="https://rajatxs.github.io/iamone-static/icons/favicon.ico" type="image/png" />
    {{/if}}
 
    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;600;700&display=swap" />
-   <link rel="stylesheet" href="/css/page/master.css" />
-   <link rel="stylesheet" href="/css/page/default.css" />
+   <link rel="stylesheet" href="https://rajatxs.github.io/iamone-static/css/page/master.css" />
+   <link rel="stylesheet" href="https://rajatxs.github.io/iamone-static/css/page/default.css" />
    <style lang="css" type="text/css">{{ css }}</style>
-   <script src="/js/page/icons.js"></script>
+   <script src="https://rajatxs.github.io/iamone-static/js/page/icons.js"></script>
 </head>
 
 <body class="page__body">
@@ -74,6 +73,6 @@
    <div class="page__blink-area"></div>
 </body>
 
-<script src="/js/page/render.js"></script>
+<script src="https://rajatxs.github.io/iamone-static/js/page/render.js"></script>
 
 </html>
