--- a/public/x/templates/default.hbs
+++ b/public/x/templates/default.hbs
@@ -16,7 +16,7 @@
    {{/if}}
 
    {{#unless user.emailVerified }}
-   <div class="page__user-unverified-label" data-page-tooltip="This profile has not verified their email. If you own this profile, you can go to app.iamone.link and verify it.">
+   <div class="page__user-unverified-label" data-page-tooltip="This profile has not verified their email. If you own this profile, you can go to app.iamone.in and verify it.">
       <p>
          <small>Unverified Profile</small>
          <svg xmlns="http://www.w3.org/2000/svg" width="12.4" height="12.4" fill="currentColor" class="bi bi-info-circle-fill" viewBox="0 0 16 16">
